fix: Text size on mobile

--- a/scss/base/_normalize.scss
+++ b/scss/base/_normalize.scss
@@ -78,3 +78,7 @@ html, body {
   text-align: center;
   font-size: .75rem;
 }
+
+.wp-block-media-text > .wp-block-media-text__content {
+  padding: 0 !important;
+}
