--- a/scss/main.css
+++ b/scss/main.css
@@ -49,6 +49,11 @@ h2 {
   font-style: italic;
   margin: 3rem 0 2rem;
 }
+@media (max-width: 600px) {
+  h2 {
+    font-size: 1.8rem;
+  }
+}
 h2.smaller {
   font-size: 1.25rem;
   margin: 0.75rem 0 0.5rem;
@@ -249,6 +254,10 @@ html, body {
 .wp-element-caption {
   text-align: center;
   font-size: 0.75rem;
+}
+
+.wp-block-media-text > .wp-block-media-text__content {
+  padding: 0 !important;
 }
 
 .menu {
@@ -908,7 +917,7 @@ html, body {
 @media (max-width: 600px) {
   .hero-header__titre {
     color: #FFFFFF;
-    font-size: 2.5rem;
+    font-size: 1.8rem;
   }
 }
 @media (max-width: 1200px) {
