--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -39,7 +39,7 @@
     text-align: center;
     @media (max-width: variables.$break-mobile) {
       color: variables.$white;
-      font-size: 2.5rem;
+      font-size: 1.8rem;
     }
   }
   @media (max-width: variables.$break-tablet) {
